# argus-quarry

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/argus_quarry/: __init__.py  cli.py  config.py  export.py  ingest.py  models.py  net.py  people.py  store.py  subjects.py
src/argus_quarry/downloaders/: __init__.py  base.py  commons.py
src/argus_quarry/seeds/: concept.yaml  identity.yaml  people.yaml  setting.yaml  wardrobe.yaml
src/argus_quarry/server/: __init__.py  app.py
tests/: conftest.py  test_cli.py  test_commons.py  test_export.py  test_ingest.py  test_models.py  test_people.py  test_server.py  test_store.py  test_subjects.py
