[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "argus-quarry"
dynamic = ["version"]
description = "Provenance-first acquisition of public-domain / CC0 portrait images for the Argus suite"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "smk762" }]
keywords = [
    "public-domain", "cc0", "provenance", "dataset", "portraits",
    "wikimedia-commons", "acquisition", "lora", "licensing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "structlog>=24.0",
    "Pillow>=10.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
cli = ["typer>=0.12", "rich>=13.0"]
# pHash is opportunistic, informational metadata only (never drives dedup here).
phash = ["ImageHash>=4.3"]
# Deferred read-only provenance API (see DESIGN.md section 9).
server = ["fastapi>=0.110", "uvicorn>=0.27"]
all = [
    "typer>=0.12",
    "rich>=13.0",
    "ImageHash>=4.3",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]
dev = ["pytest>=8.0", "ruff>=0.5", "ImageHash>=4.3"]

[project.scripts]
argus-quarry = "argus_quarry.cli:app"

[project.urls]
Homepage = "https://github.com/smk762/argus-quarry"
Repository = "https://github.com/smk762/argus-quarry"
Issues = "https://github.com/smk762/argus-quarry/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/argus_quarry/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/argus_quarry"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]
